styles.css
/*---Base---*/

:root {
	--color-raspberry: #91274C;
	--color-raspberry-dark: #501936;
	--color-peach-light: #EFDDD8;
}

* {
	box-sizing: border-box;
}

html,
body {
	margin: 0;
	padding: 0;
}

html {
	font-family: 'IBM Plex Sans', sans-serif;
	height: 100%;
	width: 100%;
	font-size: 62.5%;
}

body {
	font-size: 2.4rem;
	width: 100%;
}

p {
	margin: 0;
}

h1,
h2,
h3,
h4,
h5 {
	margin: 0;
}

a:link,
a:hover,
a:visited {
	color: var(--color-raspberry-dark);
	text-decoration: underline;
}

.visually-hidden {
	position: absolute !important;
	clip: rect(1px, 1px, 1px, 1px);
	padding:0 !important;
	border:0 !important;
	height: 1px !important; 
	width: 1px !important; 
	overflow: hidden;
}

/*---Layout---*/

.wrapper {
	margin: auto;
	width: 100%;
	max-width: 120rem;
}

/*---Typography---*/

.heading {
	font-size: 3.6rem;
	font-family: 'IBM Plex Serif';
}

.body {
	font-size: 2.4rem;
}

@media only screen and (min-width: 748px) {
	.heading {
		font-size: 4.8rem;
	}
}

/*---Components---*/

/* Hero */
.hero {
	background-image: url(images/front-desk.jpg);
	background-color: var(--color-raspberry-dark);
	background-blend-mode: multiply;
	background-size: cover;
	opacity: 0.9;
	width: 100%;
	height: 32rem;
	max-width: 100%;
	max-height: 100%;
	padding: 2.4rem;
}

.hero__logo {
	display: block;
	width: 16rem;
	max-width: 90%;
}

.hero__text {
	color: white;
	margin-top: 4.8rem;
	font-size: 3.6rem;
	font-family: 'IBM Plex Serif';
}

@media only screen and (min-width: 748px) and (max-width: 959px) {
	.hero {
		height: 60rem;
		padding: 10rem 20rem;
	}
	
	.hero__logo {
		width: 22rem;
	}
	
	.hero__text {
		font-size: 5.6rem;
		margin-top: 6rem;
	}
}

@media only screen and (min-width: 960px) {
	.hero {
		height: 60rem;
		padding: 10rem 20rem;
	}
	
	.hero__logo {
		width: 22rem;
	}
	
	.hero__text {
		font-size: 6.4rem;
		margin-top: 12rem;
	}
}


/* Tagline */
.tagline {
	position: relative;
	padding: 2rem;
	width: 100%;
	height: 40rem;
	display: flex;
	align-items: center;
	justify-content: center;
	font-size: 2.4rem;
}

.tagline::before {
	content: "";
	position: absolute;
	top: 0; 
	left: 0;
	width: 100%;
	height: 100%;
	z-index: -1;
	opacity: 0.1; 
	background-image: url(images/logo-no-text.jpg);
	background-position: center;
	background-size: contain;
	background-repeat: no-repeat;
}

.tagline__text {
	color: var(--color-raspberry-dark);
	max-width: 50rem;
	text-align: center;
	font-family: 'IBM Plex Serif';
}

@media only screen and (min-width: 748px) {
	.tagline {
		font-size: 2.8rem;
	}
}

/* Ribbon */
.ribbon {
	background: var(--color-raspberry);
	text-align: center;
	color: white;
	font-size: 1.4rem;
	padding: 1.2rem;
}

.ribbon__label {
	display: block;
}

@media only screen and (min-width: 748px) {
	.ribbon {
		font-size: 2rem;
	}
	
	.ribbon__label {
		display: inline;
	}
}

/* Section */
.section {
	display: grid;
	grid-template-columns: 1fr;
	align-items: center;
	background: var(--color-peach-light);
	color: var(--color-raspberry-dark);
	width: 100%;
}

.section--alternate {
	background: var(--color-raspberry);
	color: white;
}

.section__content {
	width: 100%;
	padding: 4.8rem 2.4rem;
}

.section__content * + * {
	margin-top: 2rem;
}

.section__image {
	width: 100%;
}

.section__image img {
	display: block;
	width: 100%;
}

@media only screen and (min-width: 748px) {
	.section {
		grid-template-columns: 2fr 1fr;
	}
	
	.section__content {
		padding: 6rem 10rem;
	}	
}

/* Image grid */
.image-grid {
	width: 100%;
	display: grid;
	grid-template-columns: 1fr 1fr;
}

.image-grid img {
	width: 100%;
	display: block;
	object-fit: cover;
}

@media only screen and (min-width: 748px) {
	.image-grid {
		grid-template-columns: 1fr 1fr 1fr 1fr;
	}
}

/* Callout group */
.callout-group {
	display: grid;
	grid-template-columns: 1fr;
	grid-gap: 6rem;
	padding: 3rem 10rem 6rem;
	width: 100%;
	background: var(--color-peach-light);
	color: var(--color-raspberry-dark);
}

@media only screen and (min-width: 748px) {
	.callout-group {
		grid-template-columns: 1fr 1fr 1fr;
		grid-gap: 6rem;
		padding: 0 6rem 6rem;
	}
}

/* Callout */
.callout {
	margin: 0 auto;
	padding: 2rem;
	text-align: center;
	width: 100%;
	max-width: 20rem;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.callout__icon {
	display: block;
	width: 6rem;
	height: 6rem;
	fill: var(--color-raspberry);
}

.callout__heading {
	font-size: 2.4rem;
	text-transform: uppercase;
	margin: 2rem;
}

.callout__text {
	font-size: 1.8rem;
}

/* Footer */
.footer {
	background: var(--color-peach-light);
	color: var(--color-raspberry-dark);
	padding: 6rem 10rem;
	display: grid;
	grid-template-columns: 1fr;
	width: 100%;
}

.footer__section {
	width: 100%;
}

.footer__section + .footer__section {
	margin-top: 3.2rem;
}

.footer__section * + * {
	margin-top: 2rem;
}

.footer__heading {
	text-transform: uppercase;
	font-size: 2.4rem;
}

.footer__text {
	font-size: 1.8rem;
	font-style: normal;
}

.footer__logo {
	width: 15rem;
}

@media only screen and (min-width: 748px) {
	.footer {
		grid-template-columns: 1fr 1fr 1fr 1fr;
	}
	
	.footer__section + .footer__section {
		margin-top: 0;
	}
}

/* Instafeed */
.instafeed-grid {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr;
}

.instafeed {
	display: block;
	width: 100%;
	position: relative;
}

.instafeed::before {
	content: "";
	display: block;
	padding-bottom: 100%;
}

.instafeed__image {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	object-fit: cover;
}

